@@ -1,6 +1,12 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+*portage-2.0.33_p1 (30 Aug 2002): urgent fix
+
+  31 Aug 2002; Dan Armak <danarmak@gentoo.org> ebuild.sh: comment out the if clause
+  that only executed inherit() conditional on $PORTAGE_RESTORE_ENV. It didn't
+  work and broke portage 2.0.33 as far as inheriting ebuilds goes.
+
 *portage-2.0.33 (30 Aug 2002): Gentoo Linux 1.4 freeze version  
 
   30 Aug 2002; Daniel Robbins <drobbins@gentoo.org> : some additional clean-ups
